# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: 111.yml  cheks.yml  project-check.yml
gendiff/: __init__.py  build_diff.py  cli.py  generate_diff.py  generator_diff.py  json.py  parser.py  plain.py  stylish.py  tree.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py  test_generate_diff.py  test_generator_diff.py
tests/fixtures/: correct_result_tree_json.txt  result_true_json.json  true_json
