[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Учебный проект. Сравнивает два файла конфигурации и показывает разницу"
authors = ["Aleksandr Zhuravlev <Alexandrzhuravlyov828@yandex.ru>"]
readme = "README.md"
repository = "https://github.com/AleksandrZhuravlevv/python-project-50"
classifiers = [
 "Programming Language :: Python :: 3.10"
]
packages = [
	{ include = "gendiff"},
	]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"
argparse = "^1.4.0"
pyyaml = "^6.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
